--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		
 		<div class="article_body">
 <p>　◆Based on two disciplines; "Law supported by AI" and "Law control of AI", the Center for Juris-Informatics is aiming at creating a new academic field called "juris-informatics" and building a global research center on juris-informatics by production of databases related with juris-informatics and investigation of usage of such databases.</p>
-<img src="https://github.com/JurisInformaticsCenter/JurisInformaticsCenter.github.io/blob/27c525edd660ced569f8bb1c1d511015c9d0b9a6/en_HP%E7%94%A8%E7%A0%94%E7%A9%B6%E6%94%AF%E6%8F%B4%E6%B4%BB%E5%8B%95%E3%81%AE%E5%9B%B3.png" alt="" width="925" height="656" class="alignnone size-full wp-image-9491">
+<img src="https://github.com/JurisInformaticsCenter/JurisInformaticsCenter.github.io/blob/27c525edd660ced569f8bb1c1d511015c9d0b9a6/en_HP%E7%94%A8%E7%A0%94%E7%A9%B6%E6%94%AF%E6%8F%B4%E6%B4%BB%E5%8B%95%E3%81%AE%E5%9B%B3.png?raw=true" alt="" width="925" height="656" class="alignnone size-full wp-image-9491">
 <h3>■ Members</h3>
 <p>SATOH, Ken（Director）*1<br>
 　TSUSHIMA, Kanae<br>
