--- a/index.html
+++ b/index.html
@@ -56,20 +56,27 @@
         <div class="article_body">
             <p>At the forefront of artificial intelligence (AI) and legal research, the Center for Juris-Informatics aims to create a new academic field—"juris-informatics"—by integrating the areas of "Law supported by AI" and "Law control of AI." Our goal is to build a global research center focused on juris-informatics, through the development of relevant databases and the exploration of their applications.</p>
             <img src="https://github.com/JurisInformaticsCenter/JurisInformaticsCenter.github.io/blob/d8354ba6e2ec660050ce268f547d7841c6742619/en_HP%E7%94%A8%E7%A0%94%E7%A9%B6%E6%94%AF%E6%8F%B4%E6%B4%BB%E5%8B%95%E3%81%AE%E5%9B%B3.png?raw=true" alt="" class="alignnone size-full wp-image-9491">
-            <h3>Our Team Members</h3>
+            <h3>Members</h3>
             <p>
                 <strong>Ken Satoh</strong> (Director) *1<br>
                 Kanae Tsushima<br>
-                Jun Ihara<br>
+                May Myo Zin<br>
+                Nguyen Ha Thanh<br>
                 Fumito Nishino<br>
-                Rika Ooki<br>
+                Katsumi Nitta
             </p>
             <p>
                 National Institute of Informatics *1<br>
                 <strong>Hideaki Takeda</strong> (Deputy Director)<br>
-                Wachara Fungwacharakorn<br>
-                May Myo Zin<br>
-                Nguyen Ha Thanh
+                Wachara Fungwacharakorn
+            </p>
+            <h3>Visiting Professors</h3>
+            <p>
+                Shozo Ota (Meiji University)<br>
+                Takeshi Maeda (Kobe University)<br>
+                Yoshiaki Nishigai (Chiba University)<br>
+                Tomoumi Nishimura (Kyushu University)<br>
+                David Restrepo Amariles (HEC, France)
             </p>
         </div><!-- // article_body -->
     </div>
