--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img src="https://github.com/JurisInformaticsCenter/JurisInformaticsCenter.github.io/blob/d8354ba6e2ec660050ce268f547d7841c6742619/en_HP%E7%94%A8%E7%A0%94%E7%A9%B6%E6%94%AF%E6%8F%B4%E6%B4%BB%E5%8B%95%E3%81%AE%E5%9B%B3.png?raw=true" alt="" class="alignnone size-full wp-image-9491">
             <h3>Members</h3>
             <p>
-                <strong>Ken Satoh</strong> (Director) *1<br>
+                <strong>Ken Satoh</strong> (Director)<br>
                 Kanae Tsushima<br>
                 May Myo Zin<br>
                 Nguyen Ha Thanh<br>
@@ -66,7 +66,7 @@
                 Katsumi Nitta
             </p>
             <p>
-                National Institute of Informatics *1<br>
+                <i>National Institute of Informatics</i><br>
                 <strong>Hideaki Takeda</strong> (Deputy Director)<br>
                 Wachara Fungwacharakorn
             </p>
