--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introducing Juris-Informatics</title>
+    <title>Center for Juris-Informatics - データサイエンス共同利用基盤施設 | データサイエンス共同利用基盤施設</title>
     <style>
         .article {
             font-family: Arial, sans-serif;
@@ -56,27 +56,27 @@
         <div class="article_body">
             <p>At the forefront of artificial intelligence (AI) and legal research, the Center for Juris-Informatics aims to create a new academic field—"juris-informatics"—by integrating the areas of "Law supported by AI" and "Law control of AI." Our goal is to build a global research center focused on juris-informatics, through the development of relevant databases and the exploration of their applications.</p>
             <img src="https://github.com/JurisInformaticsCenter/JurisInformaticsCenter.github.io/blob/d8354ba6e2ec660050ce268f547d7841c6742619/en_HP%E7%94%A8%E7%A0%94%E7%A9%B6%E6%94%AF%E6%8F%B4%E6%B4%BB%E5%8B%95%E3%81%AE%E5%9B%B3.png?raw=true" alt="" class="alignnone size-full wp-image-9491">
-            <h3>Members</h3>
+            <h3>Our Team Members</h3>
             <p>
-                <strong>Ken Satoh</strong> (Director)<br>
-                Kanae Tsushima<br>
-                May Myo Zin<br>
-                Nguyen Ha Thanh<br>
-                Fumito Nishino<br>
-                Katsumi Nitta
+                <a target="_blank" href="https://researchmap.jp/ksatoh"><strong>Ken Satoh</strong> (Director)</a><br>
+                <a target="_blank" href="https://researchmap.jp/tsushima">Kanae Tsushima</a><br>
+                <a target="_blank" href="https://researchmap.jp/maymyozin">May Myo Zin</a><br>
+                <a target="_blank" href="https://researchmap.jp/nguyenhathanh">Nguyen Ha Thanh</a><br>
+                <a target="_blank" href="https://researchmap.jp/xiye">Fumito Nishino</a><br>
+                <a target="_blank" href="https://researchmap.jp/read0059081">Katsumi Nitta</a>
             </p>
             <p>
                 <i>National Institute of Informatics</i><br>
-                <strong>Hideaki Takeda</strong> (Deputy Director)<br>
-                Wachara Fungwacharakorn
+                <a target="_blank" href="https://researchmap.jp/takeda"><strong>Hideaki Takeda</strong> (Deputy Director)</a><br>
+                <a target="_blank" href="https://researchmap.jp/wachara-fung">Wachara Fungwacharakorn</a>
             </p>
             <h3>Visiting Professors</h3>
             <p>
-                Shozo Ota (Meiji University)<br>
-                Takeshi Maeda (Kobe University)<br>
-                Yoshiaki Nishigai (Chiba University)<br>
-                Tomoumi Nishimura (Kyushu University)<br>
-                David Restrepo Amariles (HEC, France)
+                <a target="_blank" href="https://researchmap.jp/read0007715">Shozo Ota</a> (Meiji University)<br>
+                <a target="_blank" href="https://researchmap.jp/read0205267">Takeshi Maeda</a> (Kobe University)<br>
+                <a target="_blank" href="https://researchmap.jp/nishigai.yoshiaki">Yoshiaki Nishigai</a> (Chiba University)<br>
+                <a target="_blank" href="https://researchmap.jp/read0175364">Tomoumi Nishimura</a> (Kyushu University)<br>
+                <a target="_blank" href="https://www.hec.edu/en/faculty-research/faculty-directory/faculty-member/restrepoamariles-david">David Restrepo Amariles</a> (HEC, France)
             </p>
         </div><!-- // article_body -->
     </div>
