--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img src="https://github.com/JurisInformaticsCenter/JurisInformaticsCenter.github.io/blob/d8354ba6e2ec660050ce268f547d7841c6742619/en_HP%E7%94%A8%E7%A0%94%E7%A9%B6%E6%94%AF%E6%8F%B4%E6%B4%BB%E5%8B%95%E3%81%AE%E5%9B%B3.png?raw=true" alt="" class="alignnone size-full wp-image-9491">
             <h3>Our Team Members</h3>
             <p>
-                <a target="_blank" href="https://researchmap.jp/ksatoh"><strong>Ken Satoh</strong> (Director)</a><br>
+                <a target="_blank" href="https://researchmap.jp/ksatoh"><strong>Ken Satoh</strong></a> (Director)<br>
                 <a target="_blank" href="https://researchmap.jp/tsushima">Kanae Tsushima</a><br>
                 <a target="_blank" href="https://researchmap.jp/maymyozin">May Myo Zin</a><br>
                 <a target="_blank" href="https://researchmap.jp/nguyenhathanh">Nguyen Ha Thanh</a><br>
@@ -67,7 +67,7 @@
             </p>
             <p>
                 <i>National Institute of Informatics</i><br>
-                <a target="_blank" href="https://researchmap.jp/takeda"><strong>Hideaki Takeda</strong> (Deputy Director)</a><br>
+                <a target="_blank" href="https://researchmap.jp/takeda"><strong>Hideaki Takeda</strong></a> (Deputy Director)<br>
                 <a target="_blank" href="https://researchmap.jp/wachara-fung">Wachara Fungwacharakorn</a>
             </p>
             <h3>Visiting Professors</h3>
