--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="article">
         <h2>Introducing Juris-Informatics: Pioneering a New Academic Field and Establishing a Global Research Center</h2>
         <div class="article_body">
-            <p>At the forefront of artificial intelligence (AI) and legal research...</p>
+            <p>At the forefront of artificial intelligence (AI) and legal research, the Center for Juris-Informatics aims to create a new academic field—"juris-informatics"—by integrating the areas of "Law supported by AI" and "Law control of AI." Our goal is to build a global research center focused on juris-informatics, through the development of relevant databases and the exploration of their applications.</p>
             <img src="https://github.com/JurisInformaticsCenter/JurisInformaticsCenter.github.io/blob/d8354ba6e2ec660050ce268f547d7841c6742619/en_HP%E7%94%A8%E7%A0%94%E7%A9%B6%E6%94%AF%E6%8F%B4%E6%B4%BB%E5%8B%95%E3%81%AE%E5%9B%B3.png?raw=true" alt="Research Image">
             <h3>Members</h3>
             <p>
