--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
             border-radius: 10px;
         }
 		
-		.navbar{
-			margin: 20px auto;
-			max-width: 980px;
-		
-		}
+	.navbar, footer{
+            margin: 20px auto;
+            max-width: 980px;
+        }
 
         .article h2, .article_body h3 {
             color: #2c3e50;
@@ -59,7 +58,7 @@
                         <a class="nav-link" href="#publication">Publication</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#event">Event</a>
+                        <a class="nav-link" href="/event">Event</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#announcement">Announcement</a>
