--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a class="nav-link" href="/event">Event</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#announcement">Announcement</a>
+                        <a class="nav-link" href="/announcement">Announcement</a>
                     </li>
                 </ul>
             </div>
